--- a/main.html
+++ b/main.html
@@ -59,10 +59,8 @@ src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBun
 <li>
 <audio controls>
 
-<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+<source src="http://commondatastorage.googleapis">
 	
-</audio>
-
 
 </li>
 
