--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
  <table>
 <thead>
   <tr>
-  <td>Roll numbers </td>
+  <td>Roll numbers</td>
   <td>Names</td> 
 </tr>
 
@@ -28,14 +28,14 @@
   <td>2</td>
   <td>20</td>
   </tr>
-  
+<!--   
   <tr>
   
     <td>3</td>
     <td>30</td>
     
   </tr>
-  
+   -->
   
   </table>
         
@@ -47,21 +47,34 @@
   
   <li>
   
-  <img src="https://picsum.photos/id/123/200/300" alt="">
+  <img src="https://picsum.photos/id/123/200/300" alt="image">
   
   </li>
   
   
   <li>
-  <video controls> <source 
-  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
-  
+
+  <video controls>
+
+ <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" >
+
+  </video>
+
+
+<!-- 
+<video  controls >
+
+
+<source	src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
+
+</video>
+	   -->
   </li>
   
   <li>
   <audio controls>
   
-  <source src="http://commondatastorage.googleapis. com/codeskulptor-assets/Epoq-Lepidoptera.ogg" >
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" >
 
   </audio>
   
