--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
  <table>
 <thead>
   <tr>
-  <td>Roll numbers</td>
-  <td>Names</td> 
+  <th>Roll numbers</th>
+  <th>Names</th> 
 </tr>
 
 </thead>
@@ -60,24 +60,25 @@
 
   </video>
 
-
-<!-- 
-<video  controls >
-
-
-<source	src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
-
-</video>
-	   -->
   </li>
   
   <li>
-  <audio controls>
+<!--   <audio>
   
-  <source src="http://commondatastorage.googleapis. com/codeskulptor-assets/Epoq-Lepidoptera.ogg" >
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" >
 
-  </audio>
-  
+  </audio> -->
+
+
+<audio 
+	
+	src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+
+	
+</audio>
+
+
+	  
   </li>
   
   
